--- a/templates/joomla3c4s/css/custom.css
+++ b/templates/joomla3c4s/css/custom.css
@@ -102,3 +102,46 @@
     top: 100%!important;
     color: black !important;
 }
+
+
+.uk-modal-caption {
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: #ffffff;
+    text-align: center;
+    text-overflow: ellipsis;
+    overflow: visible;
+    white-space: inherit;
+    min-width: 300px;
+}
+
+
+.product-grid .uk-button {
+    -webkit-appearance: none;
+    margin: 0;
+    border: none;
+    overflow: visible;
+    font: inherit;
+    color: #FFFFFF;
+    text-transform: none;
+    display: inline-block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0 20px;
+    background: transparent;
+    vertical-align: middle;
+    line-height: 40px;
+    min-height: 40px;
+    font-size: 14px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 25px;
+    border: 2px solid #FFFFFF;
+    font-weight: bold;
+    box-shadow: inset 0 0 0 0 transparent;
+    -webkit-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
+}
