Minor customisation of toolbat

--- a/templates/joomla3c4s/css/custom.css
+++ b/templates/joomla3c4s/css/custom.css
@@ -145,3 +145,7 @@
     -webkit-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
 }
+
+.tm-block-dark {
+    background: #EFEEEE;
+}
